# EstadoEtoro

./: README.md  estado_etoro.py  pyproject.toml
etoro_impresoras/: __init__.py  consola.py  csv.py  markdown.py
etoro_modelos/: modelos.py
etoro_procesador/: constantes.py  procesadores.py
