[tool.poetry]
name = "estadoetoro"
version = "0.1.0"
description = "Reporte estado etoro"
authors = ["rdrrkh"]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.10"
pandas = "^1.4.3"
tomli = "^2.0.1"
pathlib = "^1.0.1"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
